# kaggle-enefit-competition

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml  test_deploy.yaml
notebooks/: enefit-simple-visualizations.ipynb
tests/: test_main.py
