[tool.poetry]
name = "Enefit"
version = "0.0.0"
description = ""
authors = ["Moritz Mistol <moritz.mistol@gmail.com>"]
readme = "README.md"
documentation = "https://MoritzM00.github.io/enefit"
repository = "https://github.com/MoritzM00/enefit"
license = "MIT"
keywords = ["Python", "Poetry"]
packages = [
    { include = "enefit" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^2.1.2"
numpy = "^1.26.3"
pandas = "^2.1.4"
polars = "^0.20.3"
lightgbm = "^4.2.0"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
gluonts = {extras = ["torch"], version = "^0.14.3"}
optuna = "^3.5.0"
imbalanced-learn = "^0.11.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2"
pre-commit = ">=3.1.1"
pdoc = ">=0.10.0"
black = ">=23.1.0"
ruff = ">=0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = ["enefit/__init__.py"]

[tool.ruff.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pandas related
    "PD",
]
extend-ignore = ["D203", "D213"]

[too.ruff.lint.pydocstyle]
convetion = "numpy"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
